[package]
name = "lsp-multiplexer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
tower-lsp = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
async-trait = "0.1"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"