[package]
name = "lsp-muxd"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tower-lsp = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
async-trait = "0.1"
lsp-codec = "0.3.0"
tokio-util = { version = "0.6", features = ["codec"] }
anyhow = "1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt"] }
dirs = "6.0.0"
