[package]
name = "lsp-muxd"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tower-lsp = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
async-trait = "0.1"
tokio-util = { version = "0.6", features = ["codec"] }
anyhow = { version = "1", features = ["backtrace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt"] }
dirs = "6.0.0"
fork = "0.2.0"
fd-lock = "4.0.2"
httparse = "1.9.5"
bytes = "1.9.0"
memchr = "2.7.4"
clap = { version = "4.5.27", features = ["derive"] }
